// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolve-snapshot-mysql-serverless "drop" should drop the snapshotAdapter 1`] = `Array []`;

exports[`resolve-snapshot-mysql-serverless "drop" should drop the snapshotAdapter 2`] = `Array []`;

exports[`resolve-snapshot-mysql-serverless "drop" should drop the snapshotAdapter 3`] = `Array []`;

exports[`resolve-snapshot-mysql-serverless "drop" should drop the snapshotAdapter 4`] = `
Array [
  Array [
    Object {
      "continueAfterTimeout": false,
      "database": "postgres",
      "includeResultMetadata": true,
      "resourceArn": "dbClusterOrInstanceArn",
      "secretArn": "awsSecretStoreArn",
      "sql": "CREATE TABLE IF NOT EXISTS \\"databaseName\\".\\"tableName\\" (
      \\"SnapshotKey\\" text NOT NULL,
      \\"SnapshotContent\\" text,
      PRIMARY KEY(\\"SnapshotKey\\")
    )",
    },
  ],
  Array [
    Object {
      "continueAfterTimeout": false,
      "database": "postgres",
      "includeResultMetadata": true,
      "resourceArn": "dbClusterOrInstanceArn",
      "secretArn": "awsSecretStoreArn",
      "sql": "DELETE FROM \\"databaseName\\".\\"tableName\\"
    WHERE \\"SnapshotKey\\"
    LIKE 'key%'",
    },
  ],
]
`;

exports[`resolve-snapshot-mysql-serverless "loadSnapshot" should load the snapshot 1`] = `Array []`;

exports[`resolve-snapshot-mysql-serverless "loadSnapshot" should load the snapshot 2`] = `Array []`;

exports[`resolve-snapshot-mysql-serverless "loadSnapshot" should load the snapshot 3`] = `Array []`;

exports[`resolve-snapshot-mysql-serverless "loadSnapshot" should load the snapshot 4`] = `
Array [
  Array [
    Object {
      "continueAfterTimeout": false,
      "database": "postgres",
      "includeResultMetadata": true,
      "resourceArn": "dbClusterOrInstanceArn",
      "secretArn": "awsSecretStoreArn",
      "sql": "CREATE TABLE IF NOT EXISTS \\"databaseName\\".\\"tableName\\" (
      \\"SnapshotKey\\" text NOT NULL,
      \\"SnapshotContent\\" text,
      PRIMARY KEY(\\"SnapshotKey\\")
    )",
    },
  ],
  Array [
    Object {
      "continueAfterTimeout": false,
      "database": "postgres",
      "includeResultMetadata": true,
      "resourceArn": "dbClusterOrInstanceArn",
      "secretArn": "awsSecretStoreArn",
      "sql": "SELECT substring(\\"SnapshotContent\\" from 1 for 128000)
      AS \\"SnapshotContentChunk\\"
      FROM \\"databaseName\\".\\"tableName\\"
      WHERE \\"SnapshotKey\\" = 'key' 
      LIMIT 1",
    },
  ],
]
`;

exports[`resolve-snapshot-mysql-serverless "loadSnapshot" should load the snapshot 5`] = `""`;

exports[`resolve-snapshot-mysql-serverless "saveSnapshot" should save the snapshot every 5 times 1`] = `Array []`;

exports[`resolve-snapshot-mysql-serverless "saveSnapshot" should save the snapshot every 5 times 2`] = `Array []`;

exports[`resolve-snapshot-mysql-serverless "saveSnapshot" should save the snapshot every 5 times 3`] = `Array []`;

exports[`resolve-snapshot-mysql-serverless "saveSnapshot" should save the snapshot every 5 times 4`] = `
Array [
  Array [
    Object {
      "continueAfterTimeout": false,
      "database": "postgres",
      "includeResultMetadata": true,
      "resourceArn": "dbClusterOrInstanceArn",
      "secretArn": "awsSecretStoreArn",
      "sql": "CREATE TABLE IF NOT EXISTS \\"databaseName\\".\\"tableName\\" (
      \\"SnapshotKey\\" text NOT NULL,
      \\"SnapshotContent\\" text,
      PRIMARY KEY(\\"SnapshotKey\\")
    )",
    },
  ],
  Array [
    Object {
      "continueAfterTimeout": false,
      "database": "postgres",
      "includeResultMetadata": true,
      "resourceArn": "dbClusterOrInstanceArn",
      "secretArn": "awsSecretStoreArn",
      "sql": "INSERT INTO \\"databaseName\\".\\"tableName\\"(
        \\"SnapshotKey\\", 
        \\"SnapshotContent\\"
      )
      VALUES('key', 'value = 5')
      ON CONFLICT (\\"SnapshotKey\\") DO UPDATE
      SET \\"SnapshotContent\\" = 'value = 5'",
    },
  ],
]
`;
